--- a/frameworks/stylesheets/compass/typography/text/_ellipsis.scss
+++ b/frameworks/stylesheets/compass/typography/text/_ellipsis.scss
@@ -1,4 +1,4 @@
-@import "compass/css3/shared";
+@import "compass/css3/deprecated-support";
 
 // To get full firefox support, you must install the ellipsis pattern:
 //
@@ -12,14 +12,14 @@ $use-mozilla-ellipsis-binding: false !default;
   @if $no-wrap { white-space: nowrap; }
   overflow: hidden;
   @include experimental(text-overflow, ellipsis,
-    false,
-    false,
+    not -moz,
+    not -webkit,
     -o,
     -ms,
-    false,
+    not -khtml,
     official
   );
-  @if $experimental-support-for-mozilla and $use-mozilla-ellipsis-binding {
-    -moz-binding: stylesheet-url(unquote("xml/ellipsis.xml#ellipsis"));    
+  @if $legacy-support-for-mozilla and $use-mozilla-ellipsis-binding {
+    -moz-binding: stylesheet-url(unquote("xml/ellipsis.xml#ellipsis"));
   }
 }
