--- a/frameworks/stylesheets/compass/_support.scss
+++ b/frameworks/stylesheets/compass/_support.scss
@@ -295,7 +295,7 @@ $css-sel2-support-threshold: $critical-usage-threshold !default;
 // using the `browser-ranges($capability, $prefix)` function.
 //
 // If there are current ranges in scope and the new ranges have some overlap
-// with the current, 
+// with the current,
 //
 // If there is no overlap, then the content will not be rendered.
 @mixin with-browser-ranges($capability, $prefix: $current-prefix) {
@@ -319,23 +319,10 @@ $css-sel2-support-threshold: $critical-usage-threshold !default;
 
 // Returns true if the prefixed usage stats for the capability exceed the threshold
 // or if the minimum version for a supported browser would require a prefix for the capability.
+//
+// Disable this check - always return false. Prefixes will be added outside of
+// Compass (by NPM autoprefixer module).
 @function use-prefix($prefix, $capability, $threshold, $capability-options: $default-capability-options) {
-  $usage: prefix-usage($prefix, $capability, $capability-options);
-  @if $usage > $threshold {
-    @return $usage;
-  } @else {
-    @each $browser in browsers($prefix) {
-      @if index($supported-browsers, $browser) {
-        $min-version: map-get($browser-minimum-versions, $browser);
-        @if $min-version {
-          $actual-prefix: browser-requires-prefix($browser, $min-version, $capability, $capability-options);
-          @if $actual-prefix and $prefix == $actual-prefix {
-            @return $browser $min-version;
-          }
-        }
-      }
-    }
-  }
   @return false;
 }
 
