--- a/test/css/regions.css
+++ b/test/css/regions.css
@@ -1,7 +1,5 @@
 .source {
-  -webkit-flow-into: target;
-  -ms-flow-into: target; }
+  flow-into: target; }
 
 .new-container {
-  -webkit-flow-from: target;
-  -ms-flow-from: target; }
+  flow-from: target; }
